# code/nusmv/meson.build

subdir('addons_core')
subdir('core')
subdir('profiler')
subdir('shell')
subdir('watchdog')

install_headers(
  'addons_core/addonsCore.h',
  'core/automata/AbstractAutomaton.h',
  'core/automata/AbstractAutomaton_private.h',
  'core/automata/automata.h',
  'core/automata/automata_label_creator.h',
  'core/automata/AutomataAlgoChooser.h',
  'core/automata/AutomataBddLoc.h',
  'core/automata/AutomataBddLoc_private.h',
  'core/automata/automataInt.h',
  'core/automata/AutomataLoc.h',
  'core/automata/AutomataLoc_private.h',
  'core/automata/AutomataManager.h',
  'core/automata/AutomataManager_private.h',
  'core/automata/AutomataModeLoc.h',
  'core/automata/AutomataModeLoc_private.h',
  'core/automata/AutomataNamedLoc.h',
  'core/automata/AutomataNamedLoc_private.h',
  'core/automata/AutomataTransition.h',
  'core/automata/Automaton.h',
  'core/automata/Automaton_private.h',
  'core/automata/labels/AutomataBddLabel.h',
  'core/automata/labels/AutomataBddLabel_private.h',
  'core/automata/labels/AutomataBddLabelCombinator.h',
  'core/automata/labels/AutomataBddLabelCombinator_private.h',
  'core/automata/labels/AutomataHybridLabel.h',
  'core/automata/labels/AutomataHybridLabel_private.h',
  'core/automata/labels/AutomataLabel.h',
  'core/automata/labels/AutomataLabel_private.h',
  'core/automata/labels/AutomataLabelCombinator.h',
  'core/automata/labels/AutomataLabelCombinator_private.h',
  'core/automata/labels/labelsInt.h',
  'core/automata/utils/automata_error.h',
  'core/automata/utils/AutomataLocCoupleHash.h',
  'core/automata/utils/AutomataLocHash.h',
  'core/automata/utils/AutomataLocSet.h',
  'core/automata/utils/AutomataLocSetHash.h',
  'core/automata/utils/AutomataLocTriple.h',
  'core/automata/utils/AutomataPredecessorsList.h',
  'core/automata/utils/AutomataSimRel.h',
  'core/be/be.h',
  'core/be/beInt.h',
  'core/be/beManagerInt.h',
  'core/be/bePkg.h',
  'core/be/beRbcManager.h',
  'core/bmc/bmc.h',
  'core/bmc/bmcBmc.h',
  'core/bmc/bmcCheck.h',
  'core/bmc/bmcConv.h',
  'core/bmc/bmcDump.h',
  'core/bmc/bmcGen.h',
  'core/bmc/bmcInt.h',
  'core/bmc/bmcModel.h',
  'core/bmc/bmcPkg.h',
  'core/bmc/bmcSimulate.h',
  'core/bmc/bmcTableau.h',
  'core/bmc/bmcTest.h',
  'core/bmc/bmcUtils.h',
  'core/bmc/sbmc/sbmcBmc.h',
  'core/bmc/sbmc/sbmcBmcInc.h',
  'core/bmc/sbmc/sbmcGen.h',
  'core/bmc/sbmc/sbmcHash.h',
  'core/bmc/sbmc/sbmcNodeStack.h',
  'core/bmc/sbmc/sbmcPkg.h',
  'core/bmc/sbmc/sbmcStructs.h',
  'core/bmc/sbmc/sbmcTableau.h',
  'core/bmc/sbmc/sbmcTableauInc.h',
  'core/bmc/sbmc/sbmcTableauIncLTLformula.h',
  'core/bmc/sbmc/sbmcTableauLTLformula.h',
  'core/bmc/sbmc/sbmcUtils.h',
  'core/cinit/cinit.h',
  'core/cinit/cinitInt.h',
  'core/cinit/NuSMVEnv.h',
  'core/compile/compile.h',
  'core/compile/compileInt.h',
  'core/compile/compileUtil.h',
  'core/compile/dependency/dependency_int.h',
  'core/compile/dependency/DependencyBase.h',
  'core/compile/dependency/DependencyBase_private.h',
  'core/compile/dependency/DependencyCore.h',
  'core/compile/dependency/DependencyCore_private.h',
  'core/compile/dependency/dependencyPkg.h',
  'core/compile/dependency/DependencyPsl.h',
  'core/compile/dependency/DependencyPsl_private.h',
  'core/compile/dependency/FormulaDependency.h',
  'core/compile/dependency/FormulaDependency_private.h',
  'core/compile/FlatHierarchy.h',
  'core/compile/flattening/FlattenerBase.h',
  'core/compile/flattening/FlattenerBase_private.h',
  'core/compile/flattening/FlattenerCore.h',
  'core/compile/flattening/FlattenerCore_private.h',
  'core/compile/flattening/flattening_int.h',
  'core/compile/flattening/flatteningPkg.h',
  'core/compile/flattening/MasterCompileFlattener.h',
  'core/compile/flattening/MasterCompileFlattener_private.h',
  'core/compile/pne/MasterCompilePredicateExtractor.h',
  'core/compile/pne/MasterCompilePredicateExtractor_private.h',
  'core/compile/pne/MasterCompilePredicateNormaliser.h',
  'core/compile/pne/MasterCompilePredicateNormaliser_private.h',
  'core/compile/pne/pnePkg.h',
  'core/compile/pne/PredicateExtractorBase.h',
  'core/compile/pne/PredicateExtractorBase_private.h',
  'core/compile/pne/PredicateExtractorCore.h',
  'core/compile/pne/PredicateExtractorCore_private.h',
  'core/compile/pne/PredicateNormaliserBase.h',
  'core/compile/pne/PredicateNormaliserBase_private.h',
  'core/compile/pne/PredicateNormaliserCore.h',
  'core/compile/pne/PredicateNormaliserCore_private.h',
  'core/compile/symb_table/NFunction.h',
  'core/compile/symb_table/ResolveSymbol.h',
  'core/compile/symb_table/symb_table.h',
  'core/compile/symb_table/symb_table_filters.h',
  'core/compile/symb_table/symb_table_int.h',
  'core/compile/symb_table/SymbCache.h',
  'core/compile/symb_table/SymbCache_private.h',
  'core/compile/symb_table/SymbLayer.h',
  'core/compile/symb_table/SymbLayer_private.h',
  'core/compile/symb_table/SymbTable.h',
  'core/compile/symb_table/SymbTable_private.h',
  'core/compile/symb_table/SymbType.h',
  'core/compile/symb_table/SymbType_private.h',
  'core/compile/type_checking/checkers/CheckerBase.h',
  'core/compile/type_checking/checkers/CheckerBase_private.h',
  'core/compile/type_checking/checkers/CheckerCore.h',
  'core/compile/type_checking/checkers/CheckerCore_private.h',
  'core/compile/type_checking/checkers/CheckerPsl.h',
  'core/compile/type_checking/checkers/CheckerPsl_private.h',
  'core/compile/type_checking/checkers/checkersInt.h',
  'core/compile/type_checking/checkers/CheckerStatement.h',
  'core/compile/type_checking/checkers/CheckerStatement_private.h',
  'core/compile/type_checking/type_checkingInt.h',
  'core/compile/type_checking/type_in_expr_walkers/TypeInExprBase.h',
  'core/compile/type_checking/type_in_expr_walkers/TypeInExprBase_private.h',
  'core/compile/type_checking/type_in_expr_walkers/TypeInExprCore.h',
  'core/compile/type_checking/type_in_expr_walkers/TypeInExprCore_private.h',
  'core/compile/type_checking/TypeChecker.h',
  'core/compile/type_checking/TypeChecker_private.h',
  'core/dag/dag.h',
  'core/dag/dagInt.h',
  'core/dd/dd.h',
  'core/dd/ddInt.h',
  'core/dd/DDMgr.h',
  'core/dd/DDMgr_private.h',
  'core/dd/VarsHandler.h',
  'core/enc/base/BaseEnc.h',
  'core/enc/base/BaseEnc_private.h',
  'core/enc/base/BoolEncClient.h',
  'core/enc/base/BoolEncClient_private.h',
  'core/enc/bdd/bdd.h',
  'core/enc/bdd/BddEnc.h',
  'core/enc/bdd/BddEnc_private.h',
  'core/enc/bdd/BddEncCache.h',
  'core/enc/bdd/bddInt.h',
  'core/enc/be/BeEnc.h',
  'core/enc/be/BeEnc_private.h',
  'core/enc/bool/BitValues.h',
  'core/enc/bool/BoolEnc.h',
  'core/enc/bool/BoolEnc_private.h',
  'core/enc/enc.h',
  'core/enc/encInt.h',
  'core/enc/operators.h',
  'core/enc/utils/AddArray.h',
  'core/enc/utils/OrdGroups.h',
  'core/fsm/bdd/bdd.h',
  'core/fsm/bdd/BddFsm.h',
  'core/fsm/bdd/BddFsm_private.h',
  'core/fsm/bdd/bddInt.h',
  'core/fsm/bdd/FairnessList.h',
  'core/fsm/be/BeFsm.h',
  'core/fsm/fsm.h',
  'core/fsm/FsmBuilder.h',
  'core/fsm/fsmInt.h',
  'core/fsm/sexp/BoolSexpFsm.h',
  'core/fsm/sexp/BoolSexpFsm_private.h',
  'core/fsm/sexp/sexp.h',
  'core/fsm/sexp/SexpFsm.h',
  'core/fsm/sexp/SexpFsm_private.h',
  'core/fsm/sexp/sexpInt.h',
  'core/hrc/dumpers/HrcDumper.h',
  'core/hrc/dumpers/HrcDumper_private.h',
  'core/hrc/dumpers/HrcDumperAnonymizer.h',
  'core/hrc/dumpers/HrcDumperAnonymizer_private.h',
  'core/hrc/dumpers/HrcDumperDebug.h',
  'core/hrc/dumpers/HrcDumperDebug_private.h',
  'core/hrc/dumpers/HrcDumperSmv.h',
  'core/hrc/dumpers/HrcDumperSmv_private.h',
  'core/hrc/dumpers/HrcDumperXml.h',
  'core/hrc/dumpers/HrcDumperXml_private.h',
  'core/hrc/hrc.h',
  'core/hrc/HrcFlattener.h',
  'core/hrc/HrcFlattener_private.h',
  'core/hrc/hrcInt.h',
  'core/hrc/HrcNode.h',
  'core/hrc/HrcNode_private.h',
  'core/hrc/hrcPrefixUtils.h',
  'core/hrc/hrcSymbTableUtils.h',
  'core/hrc/HrcVarDependencies.h',
  'core/ltl/ltl.h',
  'core/ltl/ltl2smv/ltl2smv.h',
  'core/ltl/ltlInt.h',
  'core/mc/mc.h',
  'core/mc/mcInt.h',
  'core/node/anonymizers/NodeAnonymizerAtom.h',
  'core/node/anonymizers/NodeAnonymizerAtom_private.h',
  'core/node/anonymizers/NodeAnonymizerBase.h',
  'core/node/anonymizers/NodeAnonymizerBase_private.h',
  'core/node/anonymizers/NodeAnonymizerDot.h',
  'core/node/anonymizers/NodeAnonymizerDot_private.h',
  'core/node/anonymizers/NodeAnonymizerST.h',
  'core/node/anonymizers/NodeAnonymizerST_private.h',
  'core/node/anonymizers/PrinterNonAmbiguousDot.h',
  'core/node/anonymizers/PrinterNonAmbiguousDot_private.h',
  'core/node/MasterNodeWalker.h',
  'core/node/MasterNodeWalker_private.h',
  'core/node/node.h',
  'core/node/nodeInt.h',
  'core/node/NodeMgr.h',
  'core/node/NodeWalker.h',
  'core/node/NodeWalker_private.h',
  'core/node/normalizers/MasterNormalizer.h',
  'core/node/normalizers/MasterNormalizer_private.h',
  'core/node/normalizers/NormalizerBase.h',
  'core/node/normalizers/NormalizerBase_private.h',
  'core/node/normalizers/NormalizerCore.h',
  'core/node/normalizers/NormalizerCore_private.h',
  'core/node/normalizers/NormalizerPsl.h',
  'core/node/normalizers/NormalizerPsl_private.h',
  'core/node/printers/MasterPrinter.h',
  'core/node/printers/MasterPrinter_private.h',
  'core/node/printers/PrinterBase.h',
  'core/node/printers/PrinterBase_private.h',
  'core/node/printers/PrinterIWffCore.h',
  'core/node/printers/PrinterIWffCore_private.h',
  'core/node/printers/PrinterPsl.h',
  'core/node/printers/PrinterPsl_private.h',
  'core/node/printers/PrinterSexpCore.h',
  'core/node/printers/PrinterSexpCore_private.h',
  'core/node/printers/printersInt.h',
  'core/node/printers/PrinterWffCore.h',
  'core/node/printers/PrinterWffCore_private.h',
  'core/opt/opt.h',
  'core/opt/optInt.h',
  'core/opt/optPkg.h',
  'core/opt/OptsHandler.h',
  'core/parser/idlist/idlist_int.h',
  'core/parser/idlist/ParserIdList.h',
  'core/parser/idlist/ParserIdList_private.h',
  'core/parser/ord/ordInt.h',
  'core/parser/ord/ParserOrd.h',
  'core/parser/ord/ParserOrd_private.h',
  'core/parser/parser.h',
  'core/parser/parserInt.h',
  'core/parser/psl/psl_symbols.h',
  'core/parser/psl/pslExpr.h',
  'core/parser/psl/pslInt.h',
  'core/parser/psl/pslNode.h',
  'core/parser/symbols.h',
  'core/prob/Problem.h',
  'core/prob/Problem_private.h',
  'core/prob/ProblemDb.h',
  'core/prob/ProblemDb_private.h',
  'core/prob/ProblemDbAccessor.h',
  'core/prob/ProblemDbAccessor_private.h',
  'core/prob/probPkg.h',
  'core/prob/prop/Prop.h',
  'core/prob/prop/Prop_private.h',
  'core/prob/prop/Prop_Rewriter.h',
  'core/prob/prop/Prop_Rewriter_private.h',
  'core/prob/prop/PropDbAccessor.h',
  'core/prob/prop/PropDbAccessor_private.h',
  'core/prob/prop/propInt.h',
  'core/prob/prop/propProp.h',
  'core/rbc/clg/clg.h',
  'core/rbc/clg/clgInt.h',
  'core/rbc/ConjSet.h',
  'core/rbc/InlineResult.h',
  'core/rbc/rbc.h',
  'core/rbc/rbcInt.h',
  'core/sat/sat.h',
  'core/sat/SatIncSolver.h',
  'core/sat/SatIncSolver_private.h',
  'core/sat/satInt.h',
  'core/sat/SatSolver.h',
  'core/sat/SatSolver_private.h',
  'core/sat/solvers/SatMinisat.h',
  'core/sat/solvers/SatMinisat_private.h',
  'core/set/set.h',
  'core/set/setInt.h',
  'core/sexp/SexpInliner.h',
  'core/simulate/simulate.h',
  'core/simulate/simulateInt.h',
  'core/simulate/SimulateState.h',
  'core/simulate/SimulateState_private.h',
  'core/simulate/simulateTransSet.h',
  'core/trace/eval/BaseEvaluator.h',
  'core/trace/eval/BaseEvaluator_private.h',
  'core/trace/exec/BaseTraceExecutor.h',
  'core/trace/exec/BaseTraceExecutor_private.h',
  'core/trace/exec/BDDCompleteTraceExecutor.h',
  'core/trace/exec/BDDCompleteTraceExecutor_private.h',
  'core/trace/exec/BDDPartialTraceExecutor.h',
  'core/trace/exec/BDDPartialTraceExecutor_private.h',
  'core/trace/exec/CompleteTraceExecutor.h',
  'core/trace/exec/CompleteTraceExecutor_private.h',
  'core/trace/exec/PartialTraceExecutor.h',
  'core/trace/exec/PartialTraceExecutor_private.h',
  'core/trace/exec/SATCompleteTraceExecutor.h',
  'core/trace/exec/SATCompleteTraceExecutor_private.h',
  'core/trace/exec/SATPartialTraceExecutor.h',
  'core/trace/exec/SATPartialTraceExecutor_private.h',
  'core/trace/exec/SATRestartPartialTraceExecutor_private.h',
  'core/trace/exec/traceExec.h',
  'core/trace/loaders/TraceLoader.h',
  'core/trace/loaders/TraceLoader_private.h',
  'core/trace/loaders/TraceXmlLoader.h',
  'core/trace/loaders/TraceXmlLoader_private.h',
  'core/trace/pkg_trace.h',
  'core/trace/pkg_traceInt.h',
  'core/trace/plugins/TraceCompact.h',
  'core/trace/plugins/TraceCompact_private.h',
  'core/trace/plugins/TraceEmpty.h',
  'core/trace/plugins/TraceEmpty_private.h',
  'core/trace/plugins/TraceExplainer.h',
  'core/trace/plugins/TraceExplainer_private.h',
  'core/trace/plugins/TracePlugin.h',
  'core/trace/plugins/TracePlugin_private.h',
  'core/trace/plugins/TraceTable.h',
  'core/trace/plugins/TraceTable_private.h',
  'core/trace/plugins/TraceXmlDumper.h',
  'core/trace/plugins/TraceXmlDumper_private.h',
  'core/trace/Trace.h',
  'core/trace/Trace_private.h',
  'core/trace/TraceLabel.h',
  'core/trace/TraceMgr.h',
  'core/trace/TraceOpt.h',
  'core/trace/TraceXml.h',
  'core/trans/bdd/bdd.h',
  'core/trans/bdd/BddTrans.h',
  'core/trans/bdd/Cluster.h',
  'core/trans/bdd/ClusterList.h',
  'core/trans/bdd/ClusterOptions.h',
  'core/trans/generic/GenericTrans.h',
  'core/trans/generic/GenericTrans_private.h',
  'core/trans/trans.h',
  'core/trans/transInt.h',
  'core/utils/array.h',
  'core/utils/assoc.h',
  'core/utils/avl.h',
  'core/utils/bignumbers/bignumbers.h',
  'core/utils/bignumbers/bvnumbersInt.h',
  'core/utils/bignumbers/numbersInt.h',
  'core/utils/BigWordNumber_private.h',
  'core/utils/BiMap.h',
  'core/utils/bmc_profiler.h',
  'core/utils/defs.h',
  'core/utils/DLlist.h',
  'core/utils/EnvObject.h',
  'core/utils/EnvObject_private.h',
  'core/utils/error.h',
  'core/utils/ErrorMgr.h',
  'core/utils/heap.h',
  'core/utils/list.h',
  'core/utils/Logger.h',
  'core/utils/LRUCache.h',
  'core/utils/lsort.h',
  'core/utils/NodeGraph.h',
  'core/utils/NodeList.h',
  'core/utils/OAHash.h',
  'core/utils/OAHash_private.h',
  'core/utils/object.h',
  'core/utils/object_private.h',
  'core/utils/Olist.h',
  'core/utils/OStream.h',
  'core/utils/Pair.h',
  'core/utils/portability.h',
  'core/utils/range.h',
  'core/utils/Slist.h',
  'core/utils/Sset.h',
  'core/utils/Stack.h',
  'core/utils/StreamMgr.h',
  'core/utils/TimerBench.h',
  'core/utils/Triple.h',
  'core/utils/Tuple5.h',
  'core/utils/ucmd.h',
  'core/utils/ustring.h',
  'core/utils/UStringMgr.h',
  'core/utils/utils.h',
  'core/utils/utils_io.h',
  'core/utils/utils_msvc.h',
  'core/utils/Vector.h',
  'core/utils/watchdog_util.h',
  'core/utils/WordNumber.h',
  'core/utils/WordNumber_private.h',
  'core/utils/WordNumberMgr.h',
  'core/wff/ExprMgr.h',
  'core/wff/lr/LogicRecognizerBase.h',
  'core/wff/lr/LogicRecognizerBase_private.h',
  'core/wff/lr/LogicRecognizerCore.h',
  'core/wff/lr/LogicRecognizerCore_private.h',
  'core/wff/lr/MasterLogicRecognizer.h',
  'core/wff/lr/MasterLogicRecognizer_private.h',
  'core/wff/rewriters/MasterWffRewriter.h',
  'core/wff/rewriters/MasterWffRewriter_private.h',
  'core/wff/rewriters/WffRewriterBase.h',
  'core/wff/rewriters/WffRewriterBase_private.h',
  'core/wff/rewriters/WffRewriterCore.h',
  'core/wff/rewriters/WffRewriterCore_private.h',
  'core/wff/w2w/w2w.h',
  'core/wff/w2w/w2wInt.h',
  'core/wff/wff.h',
  'core/wff/wffPkg.h',
  'shell/bmc/bmcCmd.h',
  'shell/bmc/sbmc/sbmcCmd.h',
  'shell/cinit/cinit.h',
  'shell/cinit/cinitCmd.h',
  'shell/cmd/cmd.h',
  'shell/cmd/cmdCmd.h',
  'shell/cmd/cmdCmdInt.h',
  'shell/cmd/cmdInt.h',
  'shell/compile/compileCmd.h',
  'shell/dd/ddCmd.h',
  'shell/enc/encCmd.h',
  'shell/fsm/bdd/bddCmd.h',
  'shell/hrc/hrcCmd.h',
  'shell/ltl/ltlCmd.h',
  'shell/mc/mcCmd.h',
  'shell/opt/optCmd.h',
  'shell/parser/parserCmd.h',
  'shell/prop/prop.h',
  'shell/prop/propCmd.h',
  'shell/simulate/simulateCmd.h',
  'shell/trace/traceCmd.h',
  'shell/utils/utilsCmd.h',
  # https://github.com/mesonbuild/meson/issues/13738
  # install_dir: includedir,
  subdir: fs.relative_to(includedir, get_option('includedir')),
  preserve_path: true,
)
