# NuSMV/meson.build

subdir('parser')
subdir('be')
subdir('dag')
subdir('enc')
subdir('ltl')
subdir('mc')
subdir('opt')
subdir('prob')
subdir('sat')
subdir('set')
subdir('simulate')
subdir('trans')
subdir('trace')
subdir('bmc')
subdir('compile')
subdir('dd')
subdir('fsm')
subdir('node')
subdir('rbc')
subdir('cinit')
subdir('utils')
subdir('sexp')
subdir('hrc')
subdir('wff')
subdir('automata')
